--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,25 +1,12 @@
+<html>
+<body>
+<h1><%= @message if @message %></h1>
+  <div id="fb-root"></div>
+  <div class="container">
+    <h1>login with Facebook!</h1>
+    <button><a href="<%= @url %> "> Signup</a></button>
+  <!-- <div class="fb-login-button" data-width="200"></div> -->
+  </div>
 
-
-<div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
-
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
-</div>
+</body>
+</html>
